--- a/docs/slides/intro_workshop_files/rr.bib
+++ b/docs/slides/intro_workshop_files/rr.bib
@@ -1,5 +1,5 @@
 
-@incollection{gawneforthcomingreflections,
+@incollection{gawne2019reflections,
   address = {Honolulu},
   series = {Language Documentation \& Conservation Special Publication},
   title = {Reflections on {{Reproducible Research}}},
@@ -8,8 +8,34 @@
   publisher = {{University of Hawaii Press}},
   author = {Gawne, Lauren and {Berez-Kroeker}, Andrea L.},
   editor = {McDonnell, Bradley and {Berez-Kroker}, Andrea L. and Holton, Gary},
-  year = {forthcoming},
+  year = {2019},
   pages = {20-30}
+}
+
+@book{xie2015dynamic,
+  address = {Boca Raton},
+  edition = {Second edition},
+  title = {Dynamic Documents with {{R}} and {{Knitr}}},
+  isbn = {978-1-4987-1696-3},
+  lccn = {QA276.4 .X54 2015},
+  publisher = {{CRC Press/Taylor \& Francis}},
+  author = {Xie, Yihui},
+  year = {2015},
+  keywords = {Computer programs,Corporation reports,Data processing,Knitr,Mathematical statistics,R (Computer program language),Statistics,Technical reports,Technical writing}
+}
+
+@article{fomel2009guest,
+  title = {Guest {{Editors}}' {{Introduction}}: {{Reproducible Research}}},
+  volume = {11},
+  issn = {1521-9615},
+  shorttitle = {Guest {{Editors}}' {{Introduction}}},
+  doi = {10/drqmvs},
+  number = {1},
+  journal = {Computing in Science \& Engineering},
+  author = {Fomel, Sergey and Claerbout, Jon F.},
+  month = jan,
+  year = {2009},
+  pages = {5-7}
 }
 
 
