--- a/docs/slides/intro_workshop.Rmd
+++ b/docs/slides/intro_workshop.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Tools for Reproducible Research in Linguistics"
 subtitle: "LSA 2019"
-author: "Bradley McDonnell^1^, Na-Rae Han^2^, Eve Koller^1^ <br/> <br/> ^1^University of Hawai‘i at Mānoa<br/> ^2^University of Pittsburg"
+author: "Bradley McDonnell^1^, Na-Rae Han^2^, Eve Koller^1^ <br/> <br/> ^1^University of Hawai‘i at Mānoa<br/> ^2^University of Pittsburgh"
 date: "2019/01/03 (updated: `r Sys.Date()`)"
 output:
   xaringan::moon_reader:
@@ -121,13 +121,11 @@ class: inverse, middle, center
 
 Reproducible research is increasingly possible with the proliferation of tools.
 
-1. `git`" allows us to keep track of the changes we make to code, data, etc.
-2. `GitHub`: allows us 
+1. git allows us to keep track of the changes we make to code, data, etc.
+2. GitHub: allows us 
   - to keep track of these changes while collaborating with others,
   - share research with others
-3. RStudio and Jyputer notebooks allows us weave together 
-
-
+3. RStudio and Jyputer notebooks allows us weave together code, code output, visulization, data, analysis, and documentation.
 
 
 ???
