Changes to intro slides

--- a/docs/intro/intro_workshop.Rmd
+++ b/docs/intro/intro_workshop.Rmd
@@ -28,8 +28,6 @@ BibOptions(check.entries = FALSE,
 rrBib <- ReadBib("intro_workshop_files/rr.bib", check = FALSE)
 ```
 
----
-
 class: inverse, middle, center
 
 # Introduction & Introductions
@@ -48,7 +46,7 @@ class: inverse, middle, center
 ---
 # Why are we offering this workshop? 
 
-Part of larger project (NSF SMA 1745249) to increase data science literacy for all of linguistics. 
+Part of larger project (NSF SMA \#1745249) to increase data science literacy for all of linguistics. 
 
   1. Several Workshops: 
     - 2018, 2019 LSA Annual Meeting 
@@ -57,11 +55,11 @@ Part of larger project (NSF SMA 1745249) to increase data science literacy for a
     - ed. by Andrea Berez-Kroeker, Bradley McDonnell, Eve Koller, Lauren Collister
 
 
-.footnote[
+<!--.footnote[
 <img src="intro_workshop_files/nsf-logo.png" style="width: 15%" align="left"/>  
 
 This material is based upon work supported by the National Science Foundation under grant SMA-1745249 to the University of Hawai‘i at Mānoa. Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.
-]
+] -->
 
 
 ---
@@ -95,11 +93,6 @@ in discussion of `r TextCite(rrBib, "fomel2009guest")`
 ]
 ---
 
-
-
-
----
-
 class: inverse, middle, center
 
 # What are some reasons for practicing reproducible research?
@@ -120,13 +113,20 @@ class: inverse, middle, center
 
 Reproducible research is increasingly possible with the proliferation of tools.
 
-1. git allows us to keep track of the changes we make to code, data, etc.
-2. GitHub allows us 
+<img src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png" style="width: 15%" align="right"/>
+- git allows us to keep track of the changes we make to code, data, etc. 
+
+
+- GitHub allows us<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/200px-Octicons-mark-github.svg.png" style="width: 15%" align="right"/>  
   - to keep track of these changes while collaborating with others,
-  - share research with others
-3. RStudio and Jyputer notebooks allow us weave together code, code output, visulization, data, analysis, and documentation.
+  - share research with others 
 
+  
+- RStudio and Jyputer notebooks allow us weave together code, code output, visulization, data, analysis, and documentation.
 
+<img src="https://www.rstudio.com/wp-content/uploads/2018/10/RStudio-Logo-flat.svg" style="width: 25%" align="left"/> 
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Jupyter_logo.svg/200px-Jupyter_logo.svg.png" style="width: 25%" align="right"/> 
 ???
 
 The means to make research reproducible 
