--- a/docs/dynamic_docs/dynamic_docs.Rmd
+++ b/docs/dynamic_docs/dynamic_docs.Rmd
@@ -21,9 +21,155 @@ options(htmltools.dir.version = FALSE)
 
 - To my knoweledge term coined by Yihui Xie for the R package `knitr` based on earlier versions of `Sweave`
 - `knitr`allows us to create documents in various formats (e.g., LateX, Markdown) with various outputs (HTML slides, `Shiny` apps, PDF documents), all of which combines Markup and executable code.
+- In the breakout section, we'll primarily work with **RMarkdown**, an *R-flavor* of traditional Markdown.
+  - I will show one example of `knitr` with LaTeX
+
+![](https://d33wubrfki0l68.cloudfront.net/61d189fd9cdf955058415d3e1b28dd60e1bd7c9b/b739c/lesson-images/rmarkdownflow.png)
+
+---
+
+class: center, middle
+
+<iframe src="https://player.vimeo.com/video/178485416?color=428bca&title=0&byline=0&portrait=0" width="640" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/178485416">What is R Markdown?</a> from <a href="https://vimeo.com/rstudioinc">RStudio, Inc.</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 
 ---
+
+# Benefits & drawbacks of RMarkdown
+
+
+.pull-left[
+- It's simple. 
+- It's portable
+- 
+]
+
+.pull-right[
+- Few native formatting options
+  - e.g., interlinear glossed examples not straightforward
+]
+
+---
+
+
+# Breaking down the components of a dynamic document with RMarkdown
+
+Dynamic documents are composed of: 
+
+1. YAML header: Contains metadata for the document
+2. R code chunks
+3. Text
+
+Let's break down the YAML header and R code chunks...
+
+---
+
+# YAML header
+The YAML header contains... 
+  1. **metadata**
+    - author
+    - title 
+    - date
+  1. **output formats**
+    - HTML
+    - Markdown
+    - PDF
+    - Word
+    
+Here's a basic example...
+
+```yaml
+---
+title: "A basic example"
+author: "Bradley McDonnell"
+date: "12/29/2018"
+output: html_document
+---
+```
+
+---
+
+# YAML header
+
+The YAML header can be quite complicated.
+- The `output` can contain a number of options (which is quite helpful!). 
+
+
+
+```yaml
+---
+title: "Dynamic Documents in RStudio"
+subtitle: "LSA 2019"
+author: "Bradley McDonnell<br/>University of Hawai‘i at Mānoa"
+date: "2019/01/03 (updated: `r Sys.Date()`)"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      highlightLines: true
+      countIncrementalSlides: false
+---
+```
+
+---
+
+# Code chunks
+
+- Code chunks are where we place the R code that we want to execute.
+
+
+````markdown
+The plot below shows a slight increase in intensity in the final syllable of the word. 
+
+`r ''````{r boxplot, echo=TRUE, eval=require('tidyverse'), comment="#", message=FALSE}
+
+library(tidyverse)
+
+# Loading the dataframe
+pse_stress <- read_tsv("data/pse-stress-simplified.csv") %>% 
+                          mutate(Word = fct_recode(Word),
+                                Position = fct_recode(Position),
+                                Vowel = fct_recode(Vowel),
+                                Weight = fct_recode(Weight),
+                                Focus = fct_recode(Focus),
+                                Final = fct_recode(Final),
+                                )
+                                      
+# A simple boxplot of intensity
+dur <- ggplot(pse_stress, aes(Position, Intensity))
+dur + geom_boxplot()
+```
+````
+
+---
+
+# Code chunks
+
+The plot below shows a slight increase in intensity in the final syllable of the word. 
+
+```{r boxplot, echo=FALSE, eval=require('tidyverse'), comment="#", message=FALSE}
+
+library(tidyverse)
+
+# Loading the dataframe
+pse_stress <- read_tsv("data/pse-stress-simplified.csv") %>% 
+                          mutate(Word = fct_recode(Word),
+                                Position = fct_recode(Position),
+                                Vowel = fct_recode(Vowel),
+                                Weight = fct_recode(Weight),
+                                Focus = fct_recode(Focus),
+                                Final = fct_recode(Final),
+                                )
+                                      
+# A simple boxplot of intensity
+dur <- ggplot(pse_stress, aes(Position, Intensity))
+dur + geom_boxplot()
+```
+
+---
+
 class: center, middle
 
 # A basic example
@@ -31,4 +177,8 @@ class: center, middle
 ???
 
 Go to an example and open it up.
+
+
+
+
 
