--- a/docs/dynamic_docs/dynamic_docs.Rmd
+++ b/docs/dynamic_docs/dynamic_docs.Rmd
@@ -12,6 +12,12 @@ output:
       countIncrementalSlides: false
 ---
 
+<style>
+code.md{
+  font-size: 10pt;
+}
+</style>
+
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 ```
@@ -40,14 +46,19 @@ class: center, middle
 
 
 .pull-left[
-- It's simple. 
+- It's simple
 - It's portable
-- 
+- Produces reproducible documents
+- Outputs to various static and dynamic formats
+- ...
 ]
 
 .pull-right[
 - Few native formatting options
   - e.g., interlinear glossed examples not straightforward
+- Yet another flavor of Markdown
+- Not widely used in linguistics
+- ...
 ]
 
 ---
@@ -57,11 +68,9 @@ class: center, middle
 
 Dynamic documents are composed of: 
 
-1. YAML header: Contains metadata for the document
+1. YAML header
 2. R code chunks
 3. Text
-
-Let's break down the YAML header and R code chunks...
 
 ---
 
@@ -93,7 +102,7 @@ output: html_document
 # YAML header
 
 The YAML header can be quite complicated.
-- The `output` can contain a number of options (which is quite helpful!). 
+- The `output` can contain a number of options (which can be quite helpful!). 
 
 
 
@@ -117,13 +126,12 @@ output:
 
 # Code chunks
 
-- Code chunks are where we place the R code that we want to execute.
+- Code chunks contain the R code that we want to execute.
 
-
-````markdown
+````md
 The plot below shows a slight increase in intensity in the final syllable of the word. 
 
-`r ''````{r boxplot, echo=TRUE, eval=require('tidyverse'), comment="#", message=FALSE}
+`r ''````{r boxplot, echo=TRUE, comment="#", message=FALSE, fig.height=6}
 
 library(tidyverse)
 
@@ -143,13 +151,14 @@ dur + geom_boxplot()
 ```
 ````
 
+
 ---
 
 # Code chunks
 
 The plot below shows a slight increase in intensity in the final syllable of the word. 
 
-```{r boxplot, echo=FALSE, eval=require('tidyverse'), comment="#", message=FALSE}
+```{r boxplot, echo=FALSE, eval=require('tidyverse'), comment="#", message=FALSE, fig.height=6}
 
 library(tidyverse)
 
@@ -170,15 +179,51 @@ dur + geom_boxplot()
 
 ---
 
+# Anatomy of a code chunk
+
+- Code chunks are marked by ` ``` ` at the start and end of the chunk.
+- Followed by the specification of the programming language, 
+  - `r` or `{r}` in our case
+  - Optionally followed by a name for the code chunk, and
+  - many options for how the code chunk is treated. 
+- Finally, the code itself!
+
+
+````markdown
+`r ''````{r boxplot, echo=FALSE, comment="#", message=FALSE, fig.height=6}
+
+# A simple boxplot of intensity
+dur <- ggplot(pse_stress, aes(Position, Intensity))
+dur + geom_boxplot()
+
+```
+````
+
+**Note it's also possible to set Global Options that apply to all code chunks.**
+
+````markdown
+`r ''````{r setup, include=FALSE}
+knitr::opts_chunk$set(echo=FALSE)
+```
+````
+
+---
+
+# Text
+
+- The text would ideally be R Markdown...
+  - but it's possible to also use LaTeX
+- Or it's possible to mix in HTML formatting
+  - and/or LaTeX code in with R Markdown
+
+---
+
 class: center, middle
 
-# A basic example
+# Questions?
 
 ???
 
 Go to an example and open it up.
-
-
-
 
 
